--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,4 @@
 {
-    "/js/onlinemarceditor.js": "/js/onlinemarceditor.js"
+    "/js/onlinemarceditor.js": "/js/onlinemarceditor.js",
+    "/js/editoralephseq.js": "/js/editoralephseq.js"
 }
