--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
     "/js/onlinemarceditor.js": "/js/onlinemarceditor.js",
-    "/js/editoralephseq.js": "/js/editoralephseq.js"
+    "/js/editoralephseq.js": "/js/editoralephseq.js",
+    "/js/cutter.js": "/js/cutter.js"
 }
