--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/onlinemarceditor.js": "/js/onlinemarceditor.js",
     "/js/editoralephseq.js": "/js/editoralephseq.js",
-    "/js/cutter.js": "/js/cutter.js"
+    "/js/cutter.js": "/js/cutter.js",
+    "/js/editor.js": "/js/editor.js"
 }
