--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "medlib/cover": "^1.0",
         "scriptotek/marc": "^2.2",
         "spatie/laravel-permission": "^5.10"
     },
