--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/tinker": "^2.8",
         "medlib/cover": "^1.0",
         "scriptotek/marc": "^2.2",
-        "spatie/laravel-permission": "^5.10"
+        "spatie/laravel-permission": "^5.10",
+        "teamtnt/tntsearch": "^3.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
